; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wl1251/extr_main.c_wl1251_join.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wl1251/extr_main.c_wl1251_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1251 = type { i32, i32, i32, i32 }

@DEFAULT_HW_GEN_TX_RATE = common dso_local global i32 0, align 4
@DEFAULT_HW_GEN_MODULATION_TYPE = common dso_local global i32 0, align 4
@CFG_BSSID_FILTER_EN = common dso_local global i32 0, align 4
@JOIN_EVENT_COMPLETE_ID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"join timeout\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wl1251*, i32, i32, i32, i32)* @wl1251_join to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wl1251_join(%struct.wl1251* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.wl1251*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.wl1251* %0, %struct.wl1251** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %13 = load i32, i32* @DEFAULT_HW_GEN_TX_RATE, align 4
  %14 = load i32, i32* @DEFAULT_HW_GEN_MODULATION_TYPE, align 4
  %15 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %16 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %19 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @wl1251_acx_frame_rates(%struct.wl1251* %12, i32 %13, i32 %14, i32 %17, i32 %20)
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %11, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %5
  br label %57

25:                                               ; preds = %5
  %26 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %27 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @is_zero_ether_addr(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %38

31:                                               ; preds = %25
  %32 = load i32, i32* @CFG_BSSID_FILTER_EN, align 4
  %33 = xor i32 %32, -1
  %34 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %35 = getelementptr inbounds %struct.wl1251, %struct.wl1251* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = and i32 %36, %33
  store i32 %37, i32* %35, align 4
  br label %38

38:                                               ; preds = %31, %25
  %39 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %40 = load i32, i32* %7, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @wl1251_cmd_join(%struct.wl1251* %39, i32 %40, i32 %41, i32 %42, i32 %43)
  store i32 %44, i32* %11, align 4
  %45 = load i32, i32* %11, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %38
  br label %57

48:                                               ; preds = %38
  %49 = load %struct.wl1251*, %struct.wl1251** %6, align 8
  %50 = load i32, i32* @JOIN_EVENT_COMPLETE_ID, align 4
  %51 = call i32 @wl1251_event_wait(%struct.wl1251* %49, i32 %50, i32 100)
  store i32 %51, i32* %11, align 4
  %52 = load i32, i32* %11, align 4
  %53 = icmp slt i32 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %48
  %55 = call i32 @wl1251_warning(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %56

56:                                               ; preds = %54, %48
  br label %57

57:                                               ; preds = %56, %47, %24
  %58 = load i32, i32* %11, align 4
  ret i32 %58
}

declare dso_local i32 @wl1251_acx_frame_rates(%struct.wl1251*, i32, i32, i32, i32) #1

declare dso_local i64 @is_zero_ether_addr(i32) #1

declare dso_local i32 @wl1251_cmd_join(%struct.wl1251*, i32, i32, i32, i32) #1

declare dso_local i32 @wl1251_event_wait(%struct.wl1251*, i32, i32) #1

declare dso_local i32 @wl1251_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
